--- a/style.css
+++ b/style.css
@@ -15,8 +15,13 @@ h1 {
 }
 
 #graph-container {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   border: 1px solid #ddd;
   margin: 0 auto;
+}
+
+#graph {
+  width: 100%;
+  height: 100%;
 }
