--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
   body {
   font-family: sans-serif;
   margin: 20px;
+  background-color: #3b3b3b;
 }
 
 h1 {
@@ -11,17 +12,36 @@ h1 {
   width: 300px;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #000000;
+  background-color: #3b3b3b;
 }
 
 #graph-container {
   width: 100%;
   height: 100%;
-  border: 1px solid #ddd;
+  border: 1px solid #000000;
   margin: 0 auto;
 }
 
 #graph {
   width: 100%;
   height: 100%;
+  background-color: #616161;
+}
+button {
+  padding: 10px 20px;
+  background-color: #3b3b3b;
+  color: #000000;
+  border: 1px solid #000000;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #8f8f8f;
+  color: #000000;
+}
+
+button:active {
+  background-color: #d3d3d3;
+  color: #000000;
 }
