--- a/style.css
+++ b/style.css
@@ -9,25 +9,28 @@ h1 {
 }
 
 .textbox {
-  width: 300px;
+  width: 13vw;
   padding: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 1vh;
   border: 1px solid #000000;
   background-color: #3b3b3b;
 }
 
 .equationtbox {
-  width: 14vw;
-  padding: 10px;
-  margin-bottom: 10px;
+  width: 13vw;
+  height: 1vh;
+  padding: 1vw;
+  margin-bottom: 0.1vh;
   border: 1px solid #000000;
   background-color: #3b3b3b;
 }
-
-#sidebartoggle{
-  z-index: 0;
-  left: 16vw;
-  top: 50vh
+#graphHistory{
+  width: 13vw;
+  height: fit-content;
+  resize: none;
+  padding: 1vw;
+  border: 1px solid #000000;
+  background-color: #3b3b3b;
 }
 
 #sidebar {
@@ -42,6 +45,7 @@ h1 {
   left: 0; /* Position sidebar at the left */
   z-index: 1;
   overflow-x: hidden; /* Disable horizontal scroll */
+  display: none;
 }
 
 #main-content {
@@ -51,7 +55,7 @@ h1 {
 
 #graph-container {
   width: 75vw; /* Maintain full width within main content */
-  height: 75vh; /* Set height for the graph container */
+  height: 71vh; /* Set height for the graph container */
   border: 1px solid #000000;
   margin: 0 auto;
   background-color: #616161;
@@ -59,7 +63,7 @@ h1 {
 
 #graph {
   width: 75vw;
-  height: 75vh;
+  height: 71vh;
   background-color: #616161;
 }
 
