--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   width: 90vw;
   height: 71vh;
   background-color: #616161;
-  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 button {
